# libjsonrpc

./: CMakeLists.txt  README.md
include/: co_helper.hpp  http_client.hpp  json_rpc.hpp
src/: http_client.cpp  json_rpc.cpp  main.cpp  root_certificates.hpp  utils.hpp
